2025-01-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-get-remote-pipe-buf): Make it more robust.

2024-12-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-make-process):
	* tramp-adb.el (tramp-adb-handle-make-process):
	* tramp-androidsu.el (tramp-androidsu-handle-make-process):
	* tramp-sh.el (tramp-sh-handle-make-process):
	* tramp-smb.el (tramp-smb-handle-start-file-process): Don't use
	connection property "remote-command", it's superfluous.

	* tramp-archive.el (tramp-archive-local-file-name):
	Add `tramp-archive-method' to `tramp-methods' temporarily.

2024-12-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-string-empty-or-nil-p):
	Declare `tramp-suppress-trace' property.
	(tramp-skeleton-make-symbolic-link): Drop volume letter when flushing.

	* tramp-sh.el (tramp-sh-handle-process-file): Do proper quoting.

2024-12-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive.el (tramp-archive-file-name-p):
	Add ;;;###tramp-autoload cookie.
	(tramp-archive-local-file-name): New defun.

2024-12-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-local-file-name): New defun.

2024-12-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-format-spec): New defun.
	(tramp-dissect-file-name, tramp-compute-multi-hops)
	(tramp-expand-args):
	* tramp-cmds.el (tramp-default-rename-file): Use it.

2024-11-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-message.el (tramp-warning): Fix `lwarn' call.

	* tramp-sh.el (tramp-sh-handle-make-process): Don't set connection
	property "remote-pid", it's unused.

2024-11-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-wrong-passwd-regexp): Add fingerprint messages.
	(tramp-fingerprint-prompt-regexp, tramp-use-fingerprint):
	New defcustoms.
	(tramp-action-fingerprint, tramp-action-show-message): New defuns.
	(tramp-action-show-and-confirm-message): Start check at (point-min).
