@@ -1,3 +1,11 @@
+2025-01-19  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-get-buffer): Set connection property " connected".
+
+	* tramp-cache.el (tramp-list-connections):
+	* tramp-cmds.el (tramp-cleanup-connection): Use connection
+	property " connected" for a check of active connections.
+
 2025-01-05  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-get-remote-pipe-buf): Make it more robust.
